# Agent

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  Directory.Build.props  Dockerfile.base-sdk  README.md  agent.sln  agent.sln.DotSettings  compose.yaml  docker-compose.yml
.claude/: CLAUDE.md  settings.local.json
.devcontainer/: Dockerfile  docker-compose.yml  entrypoint.sh  setup.sh
.git-config-shim/: config
.githooks/: pre-commit
.github/: copilot-instructions.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.run/: Jack CLI.run.xml  Jonas CLI.run.xml  agent-compose.run.xml  jack-compose.run.xml  jonas-cli.run.xml  jonas-compose.run.xml
.run-agent/: Agent.run.xml
.run-docker-compose/: docker-compose.run.xml
Agent/: Agent.csproj  Dockerfile  Program.cs  appsettings.Local.json  appsettings.json
Cli/: Cli.csproj  Dockerfile  Program.cs  app-settings.json  appsettings.json
Dashboard.Client/: Dashboard.Client.csproj  Program.cs  (+2 more)
satellite/: CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
satellite/.cargo/: config.toml
satellite/deploy/: nabu-micclock.service  nabu-satellite.service  snapclient.service
satellite/models/: LICENSE-models.md  ok_nabu.onnx  ok_nabu_custom_v3.onnx  ok_nabu_custom_v5.onnx
satellite/scripts/: build-release.sh  zigcc-fp16-shim.sh
satellite/src/: config.rs  gpio.rs  led.rs  main.rs  music.rs
satellite/src/audio/: capture.rs  cues.rs  mod.rs  playback.rs
satellite/src/satellite/: state_machine.rs
satellite/src/wake/: detector.rs  mod.rs
satellite/src/wyoming/: codec.rs  event.rs  mod.rs
satellite/tests/: spike_wake.rs  tract_clf_compat.rs
satellite/tests/fixtures/clf/: hey_livekit.onnx
satellite/training/: .gitignore  README.md  ok_nabu_en.yaml  ok_nabu_es.yaml  ok_nabu_medium.yaml  ok_nabu_small.yaml  ok_nabu_smoke.yaml
scripts/stt-enhancement-eval/: .gitignore  README.md  pyproject.toml
scripts/stt-enhancement-eval/results/: 2026-07-round1.md
scripts/stt-enhancement-eval/stt_eval/: __main__.py  backends.py  fetch_stage.py  lemonade_worker.py  manifest.py  mix_stage.py  mixing.py  phrases.py  report_stage.py  textnorm.py  validate_stage.py  wyoming_worker.py
scripts/stt-enhancement-eval/stt_eval/conditions/: __init__.py  dfn3.py  gtcrn.py  tse.py  tse_env_setup.sh
scripts/stt-enhancement-eval/tests/: test_backends.py  test_cli.py  test_gtcrn_stft.py  test_lemonade_worker.py  test_manifest.py  test_mix_stage.py  test_mixing.py  test_phrases.py  test_report_stage.py  test_textnorm.py  test_tse.py  test_validate_stage.py  test_wyoming_framing.py
(+2503 files in other folders)
