[package]
name = "nabu-satellite"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
license = "MIT"

[[bin]]
name = "nabu-satellite"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "process", "sync", "macros", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tract-onnx = "0.23"
pico-args = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
hound = "3"            # decode bundled cue WAVs at runtime (also used by tests)
rppal = "0.22"         # GpioButton + activity LED (GPIO out / APA102 over SPI); pure-Rust, static-musl-clean, Linux-only
evdev = { version = "0.13", features = ["tokio"] }  # EvdevButton: USB foot-switch/button -> KEY_* (pure-Rust)

# Both button impls sit behind src/gpio.rs::ButtonSource; pick at runtime via --button-gpio / --button-evdev.
# Migration note: rppal was archived 2025-07. To move to the maintained character-device crate later, swap
# GpioButton's impl for:  gpiocdev = { version = "0.8", features = ["tokio"] }  # gpiochip uAPI v2, no libgpiod
# NOTE: use the `evdev` crate (pure Rust), NOT `evdev-rs`/`evdev-sys` (those link C libevdev -> breaks static musl).

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }  # start_paused/time::advance for LED render tests

[profile.release]
opt-level = 3          # inference speed on the A53 matters more than a few hundred KB
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"