[project]
name = "stt-eval"
version = "0.1.0"
description = "Offline STT enhancement eval harness (see docs/superpowers/specs/2026-07-22-stt-enhancement-eval-design.md)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "soundfile>=0.12",
    "soxr>=0.4",
    "jiwer>=3.0",
    "tqdm>=4.66",
    "onnxruntime>=1.17",
    "faster-whisper>=1.0",
    "deepfilternet==0.5.6",
    "torch>=2.2",
    "torchaudio>=2.2",
    "huggingface_hub>=0.23",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stt_eval"]